Fix spacing

--- a/css/common.css
+++ b/css/common.css
@@ -22,7 +22,7 @@
     margin-top: -25px;
   }
 }
-@media screen and (min-width: 1000px) and (max-width: 1299px) {
+@media screen and (min-width: 1000px) and (max-width: 1499px) {
   .logo-footer {
     position: absolute;
     z-index: -1;
@@ -34,7 +34,7 @@
   }
 }
 
-@media screen and (min-width: 1300px) and (max-width: 2499px) {
+@media screen and (min-width: 1500px) and (max-width: 2499px) {
   .logo-footer {
     position: absolute;
     z-index: -1;
