--- a/css/getting-started.css
+++ b/css/getting-started.css
@@ -1,9 +1,10 @@
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1500px) {
   .page {
     margin: 70px auto;
     max-width: 1500px;
     display: flex;
     flex-direction: row;
+    width: 90%;
   }
 
   .header-text-getting-started {
@@ -15,6 +16,7 @@
     color: #222222;
     margin: 70px auto;
     max-width: 1500px;
+    width: 85%;
   }
 
   .right-side-getting-started {
@@ -34,7 +36,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     overflow-wrap: break-word;
-    width: auto;
+    width: 400px;
     top: 10%;
     bottom: 10%;
     margin-top: 0%;
@@ -109,7 +111,7 @@
   }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1299px) {
+@media screen and (min-width: 992px) and (max-width: 1499px) {
   .left-side-getting-started {
     position: relative;
     width: 25%;
@@ -151,6 +153,18 @@
     width: 70%;
     min-height: 1000px;
   }
+
+  .header-text-getting-started {
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 34px;
+    line-height: 40px;
+    color: #222222;
+    margin-left: 7.5%;
+    margin-top: 70px;
+  }
+  
 }
 
 img.nav-icon {
