--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@
     padding-top: 850px;
   }
 }
-@media screen and (min-width: 1000px) and (max-width: 1299px) {
+@media screen and (min-width: 1000px) and (max-width: 1499px) {
   .logo-design-second-upper {
     position: absolute;
     height: 750px;
@@ -92,7 +92,7 @@
   }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1500px) {
   .logo-design-second-upper {
     position: absolute;
     height: 750px;
