--- a/css/packages.css
+++ b/css/packages.css
@@ -69,7 +69,7 @@
     text-align: right;
   }
 }
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1500px) {
   .package-body {
     display: flex;
     margin: 30px 80px;
@@ -77,6 +77,7 @@
     flex-direction: column;
     margin: 70px auto;
     max-width: 1500px;
+    width: 90%;
   }
 
   .main-content {
@@ -113,9 +114,10 @@
     color: #222222;
     margin: 70px auto;
     max-width: 1500px;
+    width: 90%;
   }
 }
-@media screen and (min-width: 991px) and (max-width: 1299px){
+@media screen and (min-width: 991px) and (max-width: 1499px){
   .package-body {
     display: flex;
     margin: 30px 80px;
@@ -148,6 +150,15 @@
   .github-btn {
     float: right;
     text-align: right;
+  }
+  .header-text {
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 34px;
+    line-height: 40px;
+    color: #222222;
+    margin-left: 7%;
   }
 }
 
